[gd_scene load_steps=33 format=2]

[ext_resource path="res://gui/main_menu/selection_frame.png" type="Texture" id=1]
[ext_resource path="res://gui/main_menu/selection_content.png" type="Texture" id=2]
[ext_resource path="res://scenes/title/menu.gd" type="Script" id=3]
[ext_resource path="res://gui/main_menu/border.tres" type="StyleBox" id=4]
[ext_resource path="res://gui/main_menu/icon.png" type="Texture" id=5]
[ext_resource path="res://fonts/bylight/bylight.tres" type="DynamicFont" id=6]
[ext_resource path="res://gui/main_menu/selector.png" type="Texture" id=7]
[ext_resource path="res://gui/main_menu/crystal.png" type="Texture" id=8]
[ext_resource path="res://gui/main_menu/menu_titles.png" type="Texture" id=9]
[ext_resource path="res://gui/main_menu/rope.png" type="Texture" id=10]
[ext_resource path="res://gui/main_menu/hook.png" type="Texture" id=11]
[ext_resource path="res://gui/main_menu/sheen.png" type="Texture" id=12]
[ext_resource path="res://scenes/title/sheen.gd" type="Script" id=13]
[ext_resource path="res://shaders/desaturate.tres" type="Material" id=14]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 126, 36 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 56, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 21, 21 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 8 )
region = Rect2( 0, 21, 21, 21 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 8 )
region = Rect2( 0, 42, 21, 21 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 8 )
region = Rect2( 0, 63, 21, 21 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 8 )
region = Rect2( 0, 84, 21, 21 )

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 9 )
region = Rect2( 7, 0, 112, 23 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 0, 108, 126, 36 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 11 )
region = Rect2( 0, 96, 56, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 9 )
region = Rect2( 21, 69, 81, 23 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 0, 72, 126, 36 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 11 )
region = Rect2( 0, 65, 56, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 9 )
region = Rect2( 30, 46, 65, 23 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 36, 126, 36 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 11 )
region = Rect2( 0, 32, 56, 33 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 9 )
region = Rect2( 2, 23, 122, 23 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.027451, 0, 0.0941176, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectorStory" type="Sprite" parent="."]
position = Vector2( 224, 169 )
texture = ExtResource( 7 )

[node name="Story" type="Sprite" parent="."]
position = Vector2( 224, 124 )
texture = SubResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="Story"]
texture = ExtResource( 12 )
polygon = PoolVector2Array( -66, 32, 66, 32, 66, 28, -66, 28 )
script = ExtResource( 13 )

[node name="Frame" type="Sprite" parent="Story"]
position = Vector2( -75, -32 )
texture = ExtResource( 1 )
centered = false

[node name="Hook" type="Sprite" parent="Story/Frame"]
position = Vector2( 75, -12 )
texture = SubResource( 6 )

[node name="CrystalL" type="AnimatedSprite" parent="Story/Frame"]
position = Vector2( -6, 46 )
frames = SubResource( 15 )
frame = 1
centered = false

[node name="CrystalR" type="AnimatedSprite" parent="Story/Frame"]
position = Vector2( 135, 46 )
frames = SubResource( 15 )
frame = 1
centered = false

[node name="Title" type="Sprite" parent="Story"]
texture = SubResource( 16 )

[node name="SelectorSettings" type="Sprite" parent="."]
material = ExtResource( 14 )
position = Vector2( 4, 233 )
texture = ExtResource( 7 )

[node name="Settings" type="Sprite" parent="."]
material = ExtResource( 14 )
position = Vector2( 4, 188 )
texture = SubResource( 4 )

[node name="Polygon2D" type="Polygon2D" parent="Settings"]
use_parent_material = true
texture = ExtResource( 12 )
polygon = PoolVector2Array( -66, 32, 66, 32, 66, 28, -66, 28 )
script = ExtResource( 13 )

[node name="Frame" type="Sprite" parent="Settings"]
use_parent_material = true
position = Vector2( -75, -32 )
texture = ExtResource( 1 )
centered = false

[node name="Hook" type="Sprite" parent="Settings/Frame"]
use_parent_material = true
position = Vector2( 75, -12 )
texture = SubResource( 7 )

[node name="CrystalL" type="AnimatedSprite" parent="Settings/Frame"]
use_parent_material = true
position = Vector2( -6, 46 )
frames = SubResource( 15 )
centered = false

[node name="CrystalR" type="AnimatedSprite" parent="Settings/Frame"]
use_parent_material = true
position = Vector2( 135, 46 )
frames = SubResource( 15 )
centered = false

[node name="Title" type="Sprite" parent="Settings"]
use_parent_material = true
texture = SubResource( 17 )

[node name="SelectorExtras" type="Sprite" parent="."]
material = ExtResource( 14 )
position = Vector2( 224, 445 )
texture = ExtResource( 7 )

[node name="Extras" type="Sprite" parent="."]
material = ExtResource( 14 )
position = Vector2( 224, 400 )
texture = SubResource( 3 )

[node name="Polygon2D" type="Polygon2D" parent="Extras"]
use_parent_material = true
texture = ExtResource( 12 )
polygon = PoolVector2Array( -66, 32, 66, 32, 66, 28, -66, 28 )
script = ExtResource( 13 )

[node name="Frame" type="Sprite" parent="Extras"]
use_parent_material = true
position = Vector2( -75, -32 )
texture = ExtResource( 1 )
centered = false

[node name="Hook" type="Sprite" parent="Extras/Frame"]
use_parent_material = true
position = Vector2( 75, -11 )
texture = SubResource( 8 )

[node name="CrystalL" type="AnimatedSprite" parent="Extras/Frame"]
use_parent_material = true
position = Vector2( -6, 46 )
frames = SubResource( 15 )
centered = false

[node name="CrystalR" type="AnimatedSprite" parent="Extras/Frame"]
use_parent_material = true
position = Vector2( 135, 46 )
frames = SubResource( 15 )
centered = false

[node name="Title" type="Sprite" parent="Extras"]
use_parent_material = true
texture = SubResource( 18 )

[node name="SelectorLevelDesigner" type="Sprite" parent="."]
material = ExtResource( 14 )
position = Vector2( 444, 233 )
texture = ExtResource( 7 )

[node name="LevelDesigner" type="Sprite" parent="."]
material = ExtResource( 14 )
position = Vector2( 444, 188 )
texture = SubResource( 2 )

[node name="Polygon2D" type="Polygon2D" parent="LevelDesigner"]
use_parent_material = true
texture = ExtResource( 12 )
polygon = PoolVector2Array( -66, 32, 66, 32, 66, 28, -66, 28 )
script = ExtResource( 13 )

[node name="Frame" type="Sprite" parent="LevelDesigner"]
use_parent_material = true
position = Vector2( -75, -32 )
texture = ExtResource( 1 )
centered = false

[node name="Hook" type="Sprite" parent="LevelDesigner/Frame"]
use_parent_material = true
position = Vector2( 75, -12 )
texture = SubResource( 9 )

[node name="CrystalL" type="AnimatedSprite" parent="LevelDesigner/Frame"]
use_parent_material = true
position = Vector2( -6, 46 )
frames = SubResource( 15 )
centered = false

[node name="CrystalR" type="AnimatedSprite" parent="LevelDesigner/Frame"]
use_parent_material = true
position = Vector2( 135, 46 )
frames = SubResource( 15 )
centered = false

[node name="Title" type="Sprite" parent="LevelDesigner"]
use_parent_material = true
texture = SubResource( 19 )

[node name="Icon" type="Sprite" parent="."]
texture = ExtResource( 5 )
centered = false
offset = Vector2( 9, 33 )

[node name="Border" type="Panel" parent="."]
margin_top = 1.0
margin_right = 448.0
margin_bottom = 305.0
custom_styles/panel = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="Label" parent="Border"]
anchor_right = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = 19.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 6 )
text = "Take the light back from Bowser and save the Mushroom Kingdom!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stripe" type="Line2D" parent="."]
visible = false
position = Vector2( 387, 0 )
points = PoolVector2Array( 2, 1, -1, 6, -3, 12, -4, 17, -3, 22, -1, 29, 2, 34, 7, 38, 15, 42, 26, 28, 69, 43 )
width = 7.0
default_color = Color( 1, 1, 1, 1 )
texture = ExtResource( 10 )
texture_mode = 1
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="Polygon2D" type="Polygon2D" parent="."]
visible = false
texture = ExtResource( 12 )
polygon = PoolVector2Array( 0, 0, 0, 304, 448, 304, 448, 0 )

[node name="FadeOut" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.003
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
